k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app: go-web-app
    spec:
      containers:
      - name: go-web-app-application
        image: lakshmi569/go-web-app:version1
        ports:
        - containerPort: 8080
